--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,11 @@
 compile.on.save=true
+file.reference.itext-pdfa-5.3.3-javadoc.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itext-pdfa-5.3.3-javadoc.jar
+file.reference.itext-pdfa-5.3.3-sources.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itext-pdfa-5.3.3-sources.jar
+file.reference.itext-pdfa-5.3.3.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itext-pdfa-5.3.3.jar
+file.reference.itext-xtra-5.3.3-javadoc.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itext-xtra-5.3.3-javadoc.jar
+file.reference.itext-xtra-5.3.3-sources.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itext-xtra-5.3.3-sources.jar
+file.reference.itext-xtra-5.3.3.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itext-xtra-5.3.3.jar
+file.reference.itextpdf-5.3.3-javadoc.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itextpdf-5.3.3-javadoc.jar
+file.reference.itextpdf-5.3.3-sources.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itextpdf-5.3.3-sources.jar
+file.reference.itextpdf-5.3.3.jar=C:\\Users\\Laboratorio-Info\\Documents\\Agenda_ETECIA\\itext-5.3.3\\itextpdf-5.3.3.jar
 user.properties.file=C:\\Users\\Laboratorio-Info\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
