--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,23 @@ dist.jar=${dist.dir}/Agenda_ETECIA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.itext-pdfa-5.3.3-javadoc.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itext-pdfa-5.3.3-javadoc.jar
+file.reference.itext-pdfa-5.3.3-javadoc.jar-1=itext-5.3.3\\itext-pdfa-5.3.3-javadoc.jar
 file.reference.itext-pdfa-5.3.3-sources.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itext-pdfa-5.3.3-sources.jar
+file.reference.itext-pdfa-5.3.3-sources.jar-1=itext-5.3.3\\itext-pdfa-5.3.3-sources.jar
 file.reference.itext-pdfa-5.3.3.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itext-pdfa-5.3.3.jar
+file.reference.itext-pdfa-5.3.3.jar-1=itext-5.3.3\\itext-pdfa-5.3.3.jar
 file.reference.itext-xtra-5.3.3-javadoc.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itext-xtra-5.3.3-javadoc.jar
+file.reference.itext-xtra-5.3.3-javadoc.jar-1=itext-5.3.3\\itext-xtra-5.3.3-javadoc.jar
 file.reference.itext-xtra-5.3.3-sources.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itext-xtra-5.3.3-sources.jar
+file.reference.itext-xtra-5.3.3-sources.jar-1=itext-5.3.3\\itext-xtra-5.3.3-sources.jar
 file.reference.itext-xtra-5.3.3.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itext-xtra-5.3.3.jar
+file.reference.itext-xtra-5.3.3.jar-1=itext-5.3.3\\itext-xtra-5.3.3.jar
 file.reference.itextpdf-5.3.3-javadoc.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itextpdf-5.3.3-javadoc.jar
+file.reference.itextpdf-5.3.3-javadoc.jar-1=itext-5.3.3\\itextpdf-5.3.3-javadoc.jar
 file.reference.itextpdf-5.3.3-sources.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itextpdf-5.3.3-sources.jar
+file.reference.itextpdf-5.3.3-sources.jar-1=itext-5.3.3\\itextpdf-5.3.3-sources.jar
 file.reference.itextpdf-5.3.3.jar=C:\\Users\\Laboratorio-Info\\Downloads\\itext-5.3.3\\itextpdf-5.3.3.jar
+file.reference.itextpdf-5.3.3.jar-1=itext-5.3.3\\itextpdf-5.3.3.jar
 file.reference.mysql-connector-java-5.1.16-bin.jar=mysql-connector-java-5.1.16-bin.jar
 includes=**
 jar.compress=false
@@ -51,7 +60,16 @@ javac.classpath=\
     ${file.reference.itext-xtra-5.3.3-sources.jar}:\
     ${file.reference.itext-xtra-5.3.3.jar}:\
     ${file.reference.itextpdf-5.3.3-sources.jar}:\
-    ${file.reference.itextpdf-5.3.3.jar}
+    ${file.reference.itextpdf-5.3.3.jar}:\
+    ${file.reference.itext-pdfa-5.3.3-javadoc.jar-1}:\
+    ${file.reference.itext-pdfa-5.3.3-sources.jar-1}:\
+    ${file.reference.itext-pdfa-5.3.3.jar-1}:\
+    ${file.reference.itext-xtra-5.3.3-javadoc.jar-1}:\
+    ${file.reference.itext-xtra-5.3.3-sources.jar-1}:\
+    ${file.reference.itext-xtra-5.3.3.jar-1}:\
+    ${file.reference.itextpdf-5.3.3-javadoc.jar-1}:\
+    ${file.reference.itextpdf-5.3.3-sources.jar-1}:\
+    ${file.reference.itextpdf-5.3.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
